--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
 }
 
 //TODO: change to your userid
-def user = 'DWALKE30'
+def user = 'BJOHN168'
 
 task packageDistribution(type: Zip) {
     doFirst{
