--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.jetbrains:annotations:20.1.0'
     def junitVersion = '5.7.1'
     def logbackVersion = '1.2.4'
 
@@ -28,7 +29,6 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
 
-//TODO: change to your userid
 def user = 'BJOHN168'
 
 task packageDistribution(type: Zip) {
